003-istio-externaldns/istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "hello.k8s.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-app
spec:
  hosts:
  - hello.k8s.local
  gateways:
  - "003/hello-gateway"
  http:
  - match:
    - uri:
        prefix: /v1
    route:
    - destination:
        host: hello-app-legacy.003.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /v2
    route:
    - destination:
        host: hello-app.003.svc.cluster.local
        port:
          number: 8080
